text to path and  translation

--- a/demos/index.html
+++ b/demos/index.html
@@ -16,6 +16,9 @@
         width: 500px;
         height: 300px;
       }
+      .noEvent {
+        pointer-events: none;
+      }
     </style>
 
   </head>
@@ -51,7 +54,7 @@ const hiddenTextTagId = 'text'
 const config = {
   initFill: { color: 'FFFFFF', opacity: 1 },
   initStroke: { color: '000000', opacity: 1, width: 1 },
-  text: { stroke_width: 0, font_size: 24, font_family: 'serif' },
+  text: { stroke_width: 0, font_size: 40, font_family: 'serif' },
   initOpacity: 1,
   imgPath: '/img/',
   dimensions: [ width, height ],
