--- a/demos/index.html
+++ b/demos/index.html
@@ -58,7 +58,8 @@ const config = {
   initOpacity: 1,
   imgPath: '/img/',
   dimensions: [ width, height ],
-  baseUnit: 'px'
+  baseUnit: 'px',
+  fontFile: './fonts/NotoSansSC-VariableFont_wght.ttf'
 }
 
 window.canvas = new SvgCanvas(container, config)
